--- a/public/locales/zh/projects/aiChatApp.json
+++ b/public/locales/zh/projects/aiChatApp.json
@@ -1,19 +1,211 @@
 {
-  "shortDesc": "使用 GitHub Models 提供 AI 對話功能，並使用 SQLite 進行本地數據存儲，確保用戶的聊天記錄安全且可離線訪問",
+  "shortDesc": "整合多模型 LLM 與離線優先架構的 AI 聊天應用",
   "technologies": ["Expo", "React Native", "GitHub Models", "SQLite"],
+  "badge": "原生整合",
   "fullDesc": "這款 AI 聊天 App 專為學習 AI 而建，使用者可建立多聊天室、保留對話記憶，並隨時刪除歷史紀錄。\n\n技術棧：Expo 開發框架，整合 GitHub Models 實現 AI 對話功能。",
   "detail": {
     "hero": {
       "title": "AI 聊天 App",
-      "tagline": "多房間 AI 對話記憶"
+      "tagline": "AI 驅動 × 離線優先 × 原生整合",
+      "description": "基於 Expo Bare Workflow 構建的 AI 對話應用，整合 GitHub Models 提供多模型對話能力，並透過 SQLite 實現數據持久化，確保對話紀錄的安全與可存取性。",
+      "summary": {
+        "problem": {
+          "title": "挑戰",
+          "desc": "標準 Expo Go <highlight>缺乏原生模組存取</highlight>，且網路不穩時會導致訊息處理問題"
+        },
+        "solution": {
+          "title": "方案",
+          "desc": "採用 Bare Workflow 實現深度原生整合，搭配 SQLite 持久化與手動重發支援"
+        },
+        "impact": {
+          "title": "成效",
+          "desc": "達成<highlight>0% 訊息遺失率</highlight>與<highlight>原子式 DB-First 持久化</highlight>"
+        }
+      },
+      "badge": {
+        "text": "已驗證 0% 資料遺失",
+        "icon": "shield-check"
+      }
     },
     "overview": {
       "duration": "1 個月",
-      "team": "個人開發",
-      "projectType": "學習專案",
-      "mainTechs": ["Expo", "React Native", "GitHub Models"],
-      "platforms": ["Android", "iOS"]
-    }
+      "team": "個人開發 / 技術研究",
+      "projectType": "個人專案 · 行動端全端",
+      "mainTechs": ["React Native", "Expo", "SQLite", "GitHub Models API"],
+      "focus": "原生模組橋接, SQLite 持久化, Context Menu 整合",
+      "platforms": ["iOS", "Android"]
+    },
+    "challenges": [
+      {
+        "id": 1,
+        "title": "Expo Bare Workflow 與原生深度整合",
+        "symptom": "標準 Expo Go 限制了自定義原生模組的擴充性",
+        "rootCause": "託管工作流程抽象化原生層，阻礙進階觸覺回饋與系統級 UI 控制",
+        "impact": "無法實作上下文選單與進階手勢處理",
+        "badge": "已驗證",
+        "filePath": "app.json",
+        "codeSnippet": "{\n  \"expo\": {\n    \"ios\": {\n      \"bundleIdentifier\": \"com.a55663340.ai-chat-app\",\n      \"appleTeamId\": \"854H39T4U5\"\n    },\n    \"android\": {\n      \"package\": \"com.a55663340.aichatapp\"\n    },\n    \"plugins\": [\n      \"expo-router\",\n      [\"expo-sqlite\", { \"enableFTS\": true }]\n    ]\n  }\n}",
+        "highlightTerms": ["bundleIdentifier", "package", "plugins"],
+        "solution": {
+          "approach": "Expo Bare Workflow 遷移",
+          "details": [
+            "從託管模式遷移至 Bare Workflow",
+            "保留 Expo 開發體驗同時獲得原生專案存取權",
+            "整合 react-native-context-menu-view 於 iOS"
+          ],
+          "result": "完整控制 Android/iOS 專案，同時享有 Expo 的快速迭代優勢",
+          "category": "架構"
+        }
+      },
+      {
+        "id": 2,
+        "title": "響應式 UX 與資料持久化的平衡",
+        "symptom": "即時使用者回饋與資料持久化保證之間的取捨",
+        "rootCause": "純樂觀式 UI 有資料遺失風險；純 DB-First 會造成感知延遲",
+        "impact": "需要即時回饋，同時確保訊息在閃退或網路故障時不會遺失",
+        "badge": "0% 遺失率",
+        "filePath": "app/index.tsx",
+        "codeSnippet": "// 樂觀式 UI + 網路前持久化\n// 1. 即時 UI 回饋\nsetMessages(prev => [userMessage, ...prev]);\n\n// 2. 網路請求前寫入 SQLite\nawait Apis.sqlite.message.putMessage({\n  ...userMessage\n});\n\n// 3. 然後啟動 API 呼叫\nawait Apis.githubModel.postMessageToChat(userMessage);",
+        "highlightTerms": ["setMessages", "putMessage", "網路前"],
+        "solution": {
+          "approach": "樂觀式 UI + 網路前持久化",
+          "details": [
+            "即時 UI 更新提供響應式使用者體驗",
+            "SQLite 寫入在網路請求前暑存資料",
+            "即使 API 呼叫失敗或 App 閃退也能保證資料持久化"
+          ],
+          "result": "驗證 0% 訊息遺失率，同時具備即時感知響應性",
+          "category": "UX 與資料完整性"
+        }
+      },
+      {
+        "id": 3,
+        "title": "倒序列表實作",
+        "symptom": "聊天訊息以錯誤順序顯示（最新在上方）",
+        "rootCause": "標準 FlatList 從上到下渲染項目，與聊天 UX 預期相反",
+        "impact": "使用者期望最新訊息在底部並自動滾動",
+        "badge": "已實作",
+        "filePath": "app/index.tsx",
+        "codeSnippet": "<FlatList\n  ref={flatListRef}\n  inverted\n  data={messages}\n  keyExtractor={(item) =>\n    item.id.toString()\n  }\n  renderItem={renderMessageItem}\n/>",
+        "highlightTerms": ["inverted", "FlatList", "ref"],
+        "solution": {
+          "approach": "FlatList inverted 屬性",
+          "details": ["使用 FlatList 原生 inverted 屬性", "最新訊息自動顯示在底部", "新訊息時保持滾動位置"],
+          "result": "自然的聊天介面，訊息順序正確",
+          "category": "UI/UX"
+        }
+      }
+    ],
+    "decisions": {
+      "title": "架構決策與選型",
+      "subtitle": "為什麼與如何",
+      "items": [
+        {
+          "icon": "🤖",
+          "title": "為什麼選擇 GitHub Models？",
+          "reason": "開發階段免費使用，研究成本效益高",
+          "details": [
+            "與多個 LLM 提供者無縫 API 整合",
+            "透過統一介面支援 GPT-4、DeepSeek 等模型",
+            "初期開發階段無需信用卡"
+          ]
+        },
+        {
+          "icon": "🗄️",
+          "title": "為什麼選擇 SQLite？",
+          "reason": "複雜的資料關聯需要關聯式資料庫",
+          "details": ["一對多關係：對話 → 訊息", "透過適當索引實現高效查詢", "AsyncStorage 無法處理有關聯的結構化資料"]
+        },
+        {
+          "icon": "📱",
+          "title": "為什麼選擇 Context Menu？",
+          "reason": "原生 iOS 體驗的訊息操作",
+          "details": ["長按顯示刪除/重發選項", "整合 react-native-context-menu-view", "互動時提供觸覺回饋"]
+        }
+      ]
+    },
+    "evidence": {
+      "videos": [
+        {
+          "id": 1,
+          "title": "發送訊息",
+          "description": "展示即時訊息發送與 AI 回應",
+          "fileUrl": "/side-projects/ai-chat-app/send_message-dark_theme.mp4"
+        },
+        {
+          "id": 2,
+          "title": "重發失敗訊息",
+          "description": "展示透過上下文選單手動重發失敗訊息",
+          "fileUrl": "/side-projects/ai-chat-app/resend_message-dark_theme.mp4"
+        },
+        {
+          "id": 3,
+          "title": "刪除訊息",
+          "description": "上下文選單整合進行訊息刪除",
+          "fileUrl": "/side-projects/ai-chat-app/delete_message-dark_theme.mp4"
+        }
+      ],
+      "screenshots": [
+        {
+          "id": 1,
+          "title": "啟動畫面 - 深色",
+          "description": "深色主題的 App 啟動畫面",
+          "imageUrl": "/side-projects/ai-chat-app/launch_screen-dark_theme.png"
+        },
+        {
+          "id": 2,
+          "title": "啟動畫面 - 淺色",
+          "description": "淺色主題的 App 啟動畫面",
+          "imageUrl": "/side-projects/ai-chat-app/launch_screen-light_theme.png"
+        },
+        {
+          "id": 3,
+          "title": "聊天畫面 - 深色",
+          "description": "深色模式的主聊天介面",
+          "imageUrl": "/side-projects/ai-chat-app/either_chat_screen-dark_theme.png"
+        },
+        {
+          "id": 4,
+          "title": "聊天畫面 - 淺色",
+          "description": "淺色模式的主聊天介面",
+          "imageUrl": "/side-projects/ai-chat-app/either_chat_screen-light_theme.png"
+        }
+      ]
+    },
+    "coreImplementation": {
+      "title": "核心實作",
+      "subtitle": "已驗證功能",
+      "categories": [
+        {
+          "icon": "✅",
+          "title": "網路前持久化",
+          "status": "verified",
+          "items": ["樂觀式 UI + 本地暫存", "API 呼叫前寫入 SQLite 確保持久性", "0% 訊息遺失率已驗證"]
+        }
+      ]
+    },
+    "roadmap": {
+      "title": "未來實作功能",
+      "subtitle": "規劃中的增強功能",
+      "categories": [
+        {
+          "icon": "🔄",
+          "title": "狀態機",
+          "items": ["完整的 Sending/Sent 狀態轉換", "訊息狀態視覺指示器"]
+        },
+        {
+          "icon": "⚡",
+          "title": "效能優化",
+          "items": ["FlatList windowSize 優化", "maxToRenderPerBatch 調校", "getItemLayout 即時滾動"]
+        },
+        {
+          "icon": "🌐",
+          "title": "網路處理",
+          "items": ["自動離線同步（背景）", "網路狀態偵測", "重新連線時自動重試"]
+        }
+      ]
+    },
+    "disclaimer": "此專案為開源教育用途的展示。專注於原生模組整合與離線優先架構模式。所有展示的媒體資產僅供演示用途。"
   }
 }
 
