feat(portfolio): standardize project data structure and enhance detail components
- 統一所有專案的 `focus` 領域為陣列格式，簡化 [ProjectOverview]  解析邏輯
- 重構音樂播放器證據 (evidence) 為物件結構，並整合 [getMediaUrl] 工具
- 在 [ProjectHero] 與 [ProjectCard] 中新增專案角色 (role) 與驗證標誌 (badge) 支援
- 優化 AI Chat App 頁面，新增 `CoreImplementation` 組件與細節描述
- 清理語系檔案中冗餘的 `fullDesc` 與 `motivation` 內容
- 修正 [ProjectHero] 的間距樣式與 [FutureRoadmap] 的清單標點

--- a/public/locales/en/projects/10xAppSpeed.json
+++ b/public/locales/en/projects/10xAppSpeed.json
@@ -26,7 +26,7 @@
       "team": "Independent Diagnosis & Optimization",
       "projectType": "Work Project · Performance Optimization",
       "mainTechs": "React Native, Redux Toolkit, React Query, React DevTools, Flipper",
-      "focus": "Login Flow, Multi-page Navigation, State Management",
+      "focus": ["Login Flow", "Multi-page Navigation", "State Management"],
       "platforms": ["Android", "iOS"]
     },
     "metrics": {
